--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@
       flex-direction: row;
       align-items: flex-start;
       padding: 1% 0;
+      gap: 1.3rem;
       position: absolute;
       width: 80%;
       left: 12%;
