--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,8 @@
       align-items: flex-start;
       padding: 1% 0;
       gap: 1.3rem;
+      row-gap: 1.3rem;
+      column-gap: 1.3rem;
       position: absolute;
       width: 80%;
       left: 12%;
